# legacy-api-wrap

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc.cjs  .travis.yml  README.rst  biome.jsonc  legacy_api_wrap.py  pyproject.toml  pytest.ini  tests.py
.github/workflows/: ci.yml  publish.yml
src/legacy_api_wrap/: __init__.py
src/testing/legacy_api_wrap/: __init__.py  pytest.py
tests/: test_basic.py
